--- a/danusys-platform/src/main/resources/templates/fragments/default/head.html
+++ b/danusys-platform/src/main/resources/templates/fragments/default/head.html
@@ -17,8 +17,8 @@
         <script type="text/javascript" src="/webjars/jquery/3.6.0/dist/jquery.min.js" ></script>
 
         <!-- common js-->
-        <script type="text/javascript" src="../../../static/js/common/common.js" ></script>
-        <script type="text/javascript" src="../../../static/js/common/pageInit.js" ></script>
+        <script type="text/javascript" src="/js/common/common.js" ></script>
+        <script type="text/javascript" src="/js/common/pageInit.js" ></script>
     </head>
 </th:block>
 </html>
