조회관리 페이지 2건 추가, 프론트 플러그인 데이터테이블, 데이트피커 추가, 메뉴이동 기능 수정

--- a/danusys-platform/src/main/resources/templates/fragments/config/nav.html
+++ b/danusys-platform/src/main/resources/templates/fragments/config/nav.html
@@ -2,24 +2,24 @@
 <th:block th:fragment="navFragment">
     <aside class="accordionMenu accordion">
         <ul class="accordion">
-            <li id="one" class="on">
+            <li id="one" class="multi">
                 <a href="#one">관제</a>
                 <ul class="sub-menu">
-                    <li><a href="/pages/config/district">구역 설정</a></li>
-                    <li><a href="/pages/config/dimming">디밍 설정</a></li>
+                    <li><a id="district" href="/pages/config/district">구역 설정</a></li>
+                    <li><a id="dimming" href="/pages/config/dimming">디밍 설정</a></li>
                 </ul>
             </li>
-            <li id="two" class="">
+            <li id="two" class="multi">
                 <a href="#two">사용자</a>
                 <ul class="sub-menu">
-                    <li><a href="/pages/config/userAccount">사용자 계정 관리</a></li>
-                    <li><a href="/pages/config/userGroup">사용자 그룹 관리</a></li>
+                    <li><a id="userAccount" href="/pages/config/userAccount">사용자 계정 관리</a></li>
+                    <li><a id="userGroup" href="/pages/config/userGroup">사용자 그룹 관리</a></li>
                 </ul>
             </li>
-            <li id="three">
+            <li id="commonCode">
                 <a href="/pages/config/commonCode">공통 코드 관리</a>
             </li>
-            <li id="four" class="">
+            <li id="notice">
                 <a href="/pages/config/notice">공지사항</a>
             </li>
         </ul>
