--- a/danusys-platform/src/main/resources/templates/fragments/default/head.html
+++ b/danusys-platform/src/main/resources/templates/fragments/default/head.html
@@ -14,7 +14,12 @@
         <link rel="stylesheet" type="text/css" href="/css/default/layout.css">
 
         <!--js file -->
+
+        <!-- jquery -->
         <script type="text/javascript" src="/webjars/jquery/3.6.0/dist/jquery.min.js" ></script>
+
+        <!-- dayjs -->
+        <script type="text/javascript" src="/webjars/dayjs/1.10.7/dayjs.min.js" ></script>
 
         <!-- common js-->
         <script type="text/javascript" src="/js/common/common.js" ></script>
