--- a/danusys-platform/src/main/resources/templates/fragments/inqry/nav.html
+++ b/danusys-platform/src/main/resources/templates/fragments/inqry/nav.html
@@ -2,23 +2,23 @@
 <th:block th:fragment="navFragment">
     <aside class="accordionMenu accordion">
         <ul class="accordion">
-            <li id="one" class="on">
+            <li id="one" class="multi">
                 <a href="#one">이벤트 관리<span>20</span></a>
                 <ul class="sub-menu">
                     <li id="event1"><a href="/pages/inqry/event1">스마트 도시 이벤트<span>12</span></a></li>
                     <li id="event2"><a href="/pages/inqry/event2">시설물 장애 이벤트<span>8</span></a></li>
                 </ul>
             </li>
-            <li id="two" class="">
-                <a href="#two">개소 관리<span>26</span></a>
+            <li id="station">
+                <a href="/pages/inqry/station">개소 관리<span>26</span></a>
             </li>
-            <li id="three" class="">
-                <a href="#three">시설물 관리<span>58</span></a>
+            <li id="facilities">
+                <a href="/pages/inqry/facilities">시설물 관리<span>58</span></a>
             </li>
-            <li id="four" class="">
+            <li id="four">
                 <a href="#four">통신 로그 조회</a>
             </li>
-            <li id="five" class="">
+            <li id="five">
                 <a href="#five">전력량 조회</a>
             </li>
         </ul>
