시설물관리 이미지경로 변경

--- a/danusys-platform/src/main/resources/templates/view/pages/inqry/facilities.html
+++ b/danusys-platform/src/main/resources/templates/view/pages/inqry/facilities.html
@@ -3,9 +3,9 @@
 
 <th:block layout:fragment="content">
     <h4>
-        <i><img src="images/inquiryTitle.svg"></i>
+        <i><img src="/images/default/inquiryTitle.svg"></i>
         <span>조회/관리</span>
-        <i><img src="images/settingArrowNext.svg"></i>
+        <i><img src="/images/default/settingArrowNext.svg"></i>
         <span>시설물 관리</span>
     </h4>
     <section class="inquiryContent">
@@ -234,8 +234,8 @@
                     </dl>
                     <dl class="searchTextSet">
                         <dd><input type="text" placeholder="검색어를 입력하세요."></dd>
-                        <dd class="button"><i><img src="images/return.svg"></i>검색조건 초기화</dd>
-                        <dd class="button"><i><img src="images/search.svg"></i>검색</dd>
+                        <dd class="button"><i><img src="/images/default/return.svg"></i>검색조건 초기화</dd>
+                        <dd class="button"><i><img src="/images/default/search.svg"></i>검색</dd>
                     </dl>
                 </div>
             </form>
@@ -253,7 +253,7 @@
                         <li><span class="green"></span>정상 : 14</li>
                     </ul>
                     <ul>
-                        <li><i><img src="images/add.svg"></i>추가</li>
+                        <li><i><img src="/images/default/add.svg"></i>추가</li>
                     </ul>
                 </div>
             </div>
@@ -278,7 +278,7 @@
                         <td>BF001</td>
                         <td>AED</td>
                         <td><span class="status red"></span></td>
-                        <td><span class="type bus"><i><img src="images/icon_bus.svg"></i></span></td>
+                        <td><span class="type bus"><i><img src="/images/default/icon_bus.svg"></i></span></td>
                         <td>광명 시청</td>
                         <td>철산 3동</td>
                         <td>경기 광명시 시청로 20 광명시청</td>
@@ -289,7 +289,7 @@
                         <td>BF001</td>
                         <td>AED</td>
                         <td><span class="status green"></span></td>
-                        <td><span class="type pole"><i><img src="images/icon_pole.svg"></i></span></td>
+                        <td><span class="type pole"><i><img src="/images/default/icon_pole.svg"></i></span></td>
                         <td>광명 시청</td>
                         <td>철산 3동</td>
                         <td>경기 광명시 시청로 20 광명시청</td>
@@ -300,7 +300,7 @@
                         <td>BF001</td>
                         <td>AED</td>
                         <td><span class="status gray"></span></td>
-                        <td><span class="type bus"><i><img src="images/icon_bus.svg"></i></span></td>
+                        <td><span class="type bus"><i><img src="/images/default/icon_bus.svg"></i></span></td>
                         <td>광명 시청</td>
                         <td>철산 3동</td>
                         <td>경기 광명시 시청로 20 광명시청</td>
@@ -311,15 +311,15 @@
             </div>
             <div class="tableBottom">
                 <ul class="pageNav">
-                    <li class="prev"><i><img src="images/prev.svg"></i></li>
+                    <li class="prev"><i><img src="/images/default/prev.svg"></i></li>
                     <li class="on">1</li>
                     <li>2</li>
                     <li>3</li>
                     <li>4</li>
                     <li>5</li>
-                    <li class="next"><i><img src="images/next.svg"></i></li>
+                    <li class="next"><i><img src="/images/default/next.svg"></i></li>
                 </ul>
-                <p class="button"><i><img src="images/excel.svg"></i>엑셀로 내보내기</p>
+                <p class="button"><i><img src="/images/default/excel.svg"></i>엑셀로 내보내기</p>
             </div>
         </article>
     </section>
