--- a/danusys-commons-ui/src/main/resources/templates/view/commons/map.html
+++ b/danusys-commons-ui/src/main/resources/templates/view/commons/map.html
@@ -46,7 +46,8 @@
         <script type="text/javascript" src="//dapi.kakao.com/v2/maps-tunneling/sdk.js?appkey=8a0ebda8876bb68f663ceb77b22a5a51&libraries=services,clusterer"></script>
 
         <!-- local -->
-        <script type="text/javascript" src="/js/map/map_init.js"></script>
+        <script type="text/javascript" src="/js/map/mapCreater.js"></script>
+<!--        <script type="text/javascript" src="/js/map/map_init.js"></script>-->
         <script type="text/javascript" src="/js/map/map.js"></script>
     </th:block>
 </html>
