데이트 피커 추가, 환경설정 nav 오동작 수정

--- a/danusys-platform/src/main/resources/templates/fragments/config/nav.html
+++ b/danusys-platform/src/main/resources/templates/fragments/config/nav.html
@@ -5,15 +5,15 @@
             <li id="one" class="multi">
                 <a href="#one">관제</a>
                 <ul class="sub-menu">
-                    <li><a id="district" href="/pages/config/district">구역 설정</a></li>
-                    <li><a id="dimming" href="/pages/config/dimming">디밍 설정</a></li>
+                    <li id="district"><a href="/pages/config/district">구역 설정</a></li>
+                    <li id="dimming"><a href="/pages/config/dimming">디밍 설정</a></li>
                 </ul>
             </li>
             <li id="two" class="multi">
                 <a href="#two">사용자</a>
                 <ul class="sub-menu">
-                    <li><a id="userAccount" href="/pages/config/userAccount">사용자 계정 관리</a></li>
-                    <li><a id="userGroup" href="/pages/config/userGroup">사용자 그룹 관리</a></li>
+                    <li id="userAccount"><a href="/pages/config/userAccount">사용자 계정 관리</a></li>
+                    <li id="userGroup"><a href="/pages/config/userGroup">사용자 그룹 관리</a></li>
                 </ul>
             </li>
             <li id="commonCode">
