--- a/danusys-platform/src/main/resources/templates/fragments/default/head.html
+++ b/danusys-platform/src/main/resources/templates/fragments/default/head.html
@@ -21,6 +21,11 @@
         <!-- dayjs -->
         <script type="text/javascript" src="/webjars/dayjs/1.10.7/dayjs.min.js" ></script>
 
+        <!-- datetimepicker -->
+        <link rel="stylesheet" type="text/css" href="/css/plugin/air-datepicker/air-datepicker.css">
+        <script type=text/javascript src="/js/plugin/air-datepicker/datepicker.js"></script>
+        <script type=text/javascript src="/js/plugin/air-datepicker/datepicker.ko.js"></script>
+
         <!-- common js-->
         <script type="text/javascript" src="/js/common/common.js" ></script>
         <script type="text/javascript" src="/js/common/pageInit.js" ></script>
