행정구역 선택 다중 셀렉트 박스

--- a/danusys-platform/src/main/resources/templates/view/pages/config/dimming.html
+++ b/danusys-platform/src/main/resources/templates/view/pages/config/dimming.html
@@ -20,14 +20,14 @@
                     <div>
                         <dl class="selectboxSet">
                             <dt>행정구역</dt>
-                            <dd>
-                                <div class="dropdownCheckbox">
-                                    <p class="checkboxTitle checkboxTitle_district">행정구역 선택</p>
-                                    <ul class="checkboxList checkboxList_district">
+                            <dd class="dropdown_checkbox">
+                                <div class="box">
+                                    <p class="checkbox_title checkbox_title_district select">행정구역 선택</p>
+                                    <ul class="checkbox_list checkbox_list_district list">
                                         <li>
                                             <span>
-                                                <input type="checkbox" id="districtALL" name="">
-                                                <label for="districtALL"><span></span>전체</label>
+                                                <input type="checkbox" id="checkAll" name="">
+                                                <label for="checkAll"><span></span>전체</label>
                                             </span>
                                         </li>
                                         <li>
