--- a/danusys-platform/src/main/resources/templates/view/pages/inqry/event1.html
+++ b/danusys-platform/src/main/resources/templates/view/pages/inqry/event1.html
@@ -17,10 +17,10 @@
                 <div>
                     <dl class="selectboxSet">
                         <dt>이벤트 종류</dt>
-                        <dd>
-                            <div class="dropdownCheckbox">
-                                <p class="checkboxTitle checkboxTitle_event">이벤트 종류 선택</p>
-                                <ul class="checkboxList checkboxList_event">
+                        <dd class="dropdown_checkbox">
+                            <div class="box">
+                                <p class="checkbox_title checkbox_title_district select">행정구역 선택</p>
+                                <ul class="checkbox_list checkbox_list_district list">
                                     <li>
 										<span>
 											<input type="checkbox" id="eventALL" name="">
@@ -105,14 +105,14 @@
                 <div>
                     <dl class="selectboxSet">
                         <dt>행정구역</dt>
-                        <dd>
-                            <div class="dropdownCheckbox">
-                                <p class="checkboxTitle checkboxTitle_district">행정구역 선택</p>
-                                <ul class="checkboxList checkboxList_district">
+                        <dd class="dropdown_checkbox">
+                            <div class="box">
+                                <p class="checkbox_title checkbox_title_district select">행정구역 선택</p>
+                                <ul class="checkbox_list checkbox_list_district list">
                                     <li>
 										<span>
-											<input type="checkbox" id="districtALL" name="">
-											<label for="districtALL"><span></span>전체</label>
+											<input type="checkbox" id="checkAll" name="">
+											<label for="checkAll"><span></span>전체</label>
 										</span>
                                     </li>
                                     <li>
