--- a/danusys-platform/src/main/resources/static/css/default/layout.css
+++ b/danusys-platform/src/main/resources/static/css/default/layout.css
@@ -413,11 +413,12 @@ header .utmenu li i{width: 18px; height: 18px; margin: 0px 8px 0px 0px;}
 
 
 /* dropdown_checkbox */
-.dropdownCheckbox{min-width: 220px; margin: 0px;}
-.checkboxTitle{width: 100%; height: 34px; line-height: 32px; margin: 0px; padding: 0px 14px; color: #dee0e4; font-size: 14px; box-sizing: border-box; border: 1px solid #292c34; border-radius: 3px; background: url("../../images/default/bg_selectbox_g.svg") 194px center no-repeat #1a1b1d; background-size: 13px; cursor: pointer;}
-.checkboxList{position: absolute; top: 34px; display: none; overflow: auto; width: 360px; min-height: 86px; max-height: 140px; z-index: 1; margin: -1px 0px 0px 0px; padding: 14px; box-sizing: border-box; border-bottom-left-radius: 4px; border-bottom-right-radius: 4px; border: 1px solid #292c34; background: #1a1b1d;}
-.checkboxList li{display: flex; align-items: center; justify-content: flex-start; grid-gap: 10px; line-height: 28px; color: #dee0e4;}
-.checkboxList li span{flex: 1;}
+.dropdown_checkbox{min-width: 220px; margin: 0px;}
+.dropdown_checkbox .box{width: 100%}
+.checkbox_title{width: 220px; height: 34px; line-height: 32px; margin: 0px; padding: 0px 14px; color: #dee0e4; font-size: 14px; box-sizing: border-box; border: 1px solid #292c34; border-radius: 3px; background: url("../../images/default/bg_selectbox_g.svg") 194px center no-repeat #1a1b1d; background-size: 13px; cursor: pointer; text-overflow: ellipsis; overflow: hidden;}
+.checkbox_list{position: absolute; top: 34px; display: none; overflow: auto; width: 360px; min-height: 86px; max-height: 140px; z-index: 1; margin: -1px 0px 0px 0px; padding: 14px; box-sizing: border-box; border-bottom-left-radius: 4px; border-bottom-right-radius: 4px; border: 1px solid #292c34; background: #1a1b1d;}
+.checkbox_list li{display: flex; align-items: center; justify-content: flex-start; grid-gap: 10px; line-height: 28px; color: #dee0e4;}
+.checkbox_list li span{flex: 1;}
 
 
 /* dimming */
