--- a/danusys-platform/src/main/resources/templates/view/pages/config/district.html
+++ b/danusys-platform/src/main/resources/templates/view/pages/config/district.html
@@ -19,14 +19,14 @@
                 <div>
                     <dl class="selectboxSet">
                         <dt>행정구역</dt>
-                        <dd>
-                            <div class="dropdownCheckbox">
-                                <p class="checkboxTitle checkboxTitle_district">행정구역 선택</p>
-                                <ul class="checkboxList checkboxList_district">
+                        <dd class="dropdown_checkbox">
+                            <div class="box">
+                                <p class="checkbox_title checkbox_title_district select">행정구역 선택</p>
+                                <ul class="checkbox_list checkbox_list_district list">
                                     <li>
 									<span>
-										<input type="checkbox" id="districtALL" name="">
-										<label for="districtALL"><span></span>전체</label>
+										<input type="checkbox" id="checkAll" name="">
+										<label for="checkAll"><span></span>전체</label>
 									</span>
                                     </li>
                                     <li>
@@ -113,8 +113,7 @@
 									<span>
 										<input type="checkbox" id="districtFind17" name="">
 										<label for="districtFind17"><span></span>하안4동</label>
-									</span>
-                                        <span>
+									</span><span>
 										<input type="checkbox" id="districtFind18" name="">
 										<label for="districtFind18"><span></span>학온동</label>
 									</span>
