--- a/danusys-platform/src/main/resources/templates/view/pages/inqry/station.html
+++ b/danusys-platform/src/main/resources/templates/view/pages/inqry/station.html
@@ -15,14 +15,14 @@
                 <div>
                     <dl class="selectboxSet">
                         <dt>개소 종류</dt>
-                        <dd>
-                            <div class="dropdownCheckbox">
-                                <p class="checkboxTitle checkboxTitle_station">개소 종류 선택</p>
-                                <ul class="checkboxList checkboxList_station">
+                        <dd class="dropdown_checkbox">
+                            <div class="box">
+                                <p class="checkbox_title checkbox_title_district select">행정구역 선택</p>
+                                <ul class="checkbox_list checkbox_list_district list">
                                     <li>
 										<span>
-											<input type="checkbox" id="stationAll" name="">
-											<label for="stationAll"><span></span>전체</label>
+											<input type="checkbox" id="checkAll" name="">
+											<label for="checkAll"><span></span>전체</label>
 										</span>
                                     </li>
                                     <li>
@@ -41,14 +41,14 @@
                     </dl>
                     <dl class="selectboxSet">
                         <dt>시설물 종류</dt>
-                        <dd>
-                            <div class="dropdownCheckbox">
-                                <p class="checkboxTitle checkboxTitle_stationFind">시설물 종류 선택</p>
-                                <ul class="checkboxList checkboxList_stationFind">
+                        <dd class="dropdown_checkbox">
+                            <div class="box">
+                                <p class="checkbox_title checkbox_title_district select">행정구역 선택</p>
+                                <ul class="checkbox_list checkbox_list_district list">
                                     <li>
 										<span>
-											<input type="checkbox" id="stationAll" name="">
-											<label for="stationAll"><span></span>전체</label>
+											<input type="checkbox" id="checkAll" name="">
+											<label for="checkAll"><span></span>전체</label>
 										</span>
                                     </li>
                                     <li>
@@ -69,14 +69,14 @@
                 <div>
                     <dl class="selectboxSet">
                         <dt>행정구역</dt>
-                        <dd>
-                            <div class="dropdownCheckbox">
-                                <p class="checkboxTitle checkboxTitle_district">행정구역 선택</p>
-                                <ul class="checkboxList checkboxList_district">
+                        <dd class="dropdown_checkbox">
+                            <div class="box">
+                                <p class="checkbox_title checkbox_title_district select">행정구역 선택</p>
+                                <ul class="checkbox_list checkbox_list_district list">
                                     <li>
 										<span>
-											<input type="checkbox" id="districtALL" name="">
-											<label for="districtALL"><span></span>전체</label>
+											<input type="checkbox" id="checkAll" name="">
+											<label for="checkAll"><span></span>전체</label>
 										</span>
                                     </li>
                                     <li>
