--- a/danusys-platform/src/main/resources/templates/view/login/loginError.html
+++ b/danusys-platform/src/main/resources/templates/view/login/loginError.html
@@ -7,7 +7,7 @@
 <link rel="stylesheet" type="text/css" href="/css/dark/main.css">
 
 <script src="/webjars/jquery/3.6.0/dist/jquery.min.js"></script>
-<script src="/js/login.js"></script>
+<script src="/js/login2.js"></script>
 
 <script type="text/javascript">
 $(document).ready(function() {
@@ -36,7 +36,7 @@ $(document).ready(function() {
 
 					<span class="txt">통합플랫폼에 등록되지 않은 아이디이거나,<br>아이디 또는 비밀번호를 잘못 입력하셨습니다.</span>
 				</dt>
-				<dd onclick="javascript:window.location = '/hitest'">
+				<dd onclick="javascript:window.location = '/loginpage'">
 					<span class="icon"><img src="/images/login/icon_arrow_back.png"></span>
 					<span class="txt">뒤로 </span>
 				</dd>
