맵 레이어 제어 공통화중2

--- a/danusys-platform/src/main/resources/templates/fragments/default/map.html
+++ b/danusys-platform/src/main/resources/templates/fragments/default/map.html
@@ -12,6 +12,7 @@
 
     <th:block th:fragment="defaultMap">
         <div id="map">
+            <div id="mouse-position"></div>
             <div class="mapButton">
                 <ul class="tabButton">
                     <li class="on">지도</li>
