플랫폼에 어스 추가

--- a/danusys-commons-auth/src/main/resources/templates/view/login/test2.html
+++ b/danusys-commons-auth/src/main/resources/templates/view/login/test2.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" type="text/css" href="/css/dark/main.css">
 
     <script src="/webjars/jquery/3.6.0/dist/jquery.min.js"></script>
-    <script src="/js/logintest.js"></script>
+    <script src="/js/loginWhy.js"></script>
 
     <script th:inline="javascript">
         $(document).ready(function () {
