--- a/danusys-platform/src/main/resources/templates/view/login/test1.html
+++ b/danusys-platform/src/main/resources/templates/view/login/test1.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html lang="ko" xmlns:th="http://www.thymeleaf.org" >
 <head>
     <meta charset="utf-8">
     <title>SMART-CITY 통합플랫폼</title>
@@ -8,7 +8,7 @@
 
     <script src="/webjars/jquery/3.6.0/dist/jquery.min.js"></script>
 
-    <script src="/js/logintest.js" defer></script>
+    <script src="/js/loginWhy.js" defer ></script>
 
 </head>
 
@@ -18,6 +18,7 @@
         <dl>
             <dd id="loginBgTitSub"></dd>
             <dt id="loginBgTit"></dt>
+            <th:block></th:block>
         </dl>
     </div>
 
