--- a/demo/src/main/resources/templates/view/login/test.html
+++ b/demo/src/main/resources/templates/view/login/test.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" type="text/css" href="/css/dark/main.css">
 
     <script src="/webjars/jquery/3.6.0/dist/jquery.min.js"></script>
-    <script src="/js/logintest.js"  defer></script>
+    <script src="/js/loginWhy.js"  defer></script>
 
 </head>
 
