검색조건 초기화 버튼 공통화

--- a/danusys-platform/src/main/resources/templates/view/pages/config/commonCode.html
+++ b/danusys-platform/src/main/resources/templates/view/pages/config/commonCode.html
@@ -11,7 +11,7 @@
             <span>공통 코드 관리</span>
         </h4>
         <section class="settingContent">
-            <article class="searchForm">
+            <article class="search-form" id="searchForm">
                 <h6>공통 코드 검색</h6>
                 <form>
                     <div>
