--- a/danusys-platform/src/main/resources/templates/view/pages/config/dimming.html
+++ b/danusys-platform/src/main/resources/templates/view/pages/config/dimming.html
@@ -14,7 +14,7 @@
             <span>스마트가로등 디밍 설정</span>
         </h4>
         <section class="settingContent">
-            <article class="searchForm">
+            <article class="search-form" id="searchForm">
                 <h6>스마트가로등 검색</h6>
                 <form>
                     <div>
