--- a/danusys-platform/src/main/resources/templates/view/pages/config/notice.html
+++ b/danusys-platform/src/main/resources/templates/view/pages/config/notice.html
@@ -12,7 +12,7 @@
             <span>공지사항</span>
         </h4>
         <section class="settingContent">
-            <article class="searchForm">
+            <article class="search-form" id="searchForm">
                 <h6>공지사항 검색</h6>
                 <form>
                     <div>
