--- a/danusys-platform/src/main/resources/templates/view/pages/config/userGroup.html
+++ b/danusys-platform/src/main/resources/templates/view/pages/config/userGroup.html
@@ -14,7 +14,7 @@
         <span>사용자 그룹 관리</span>
     </h4>
     <section class="settingContent">
-        <article class="searchForm">
+        <article class="search-form" id="searchForm">
             <h6>사용자 그룹 검색</h6>
             <form>
                 <div>
