--- a/danusys-platform/src/main/resources/templates/view/pages/inqry/event1.html
+++ b/danusys-platform/src/main/resources/templates/view/pages/inqry/event1.html
@@ -11,7 +11,7 @@
         <span>스마트 도시 이벤트</span>
     </h4>
     <section class="inquiryContent">
-        <article class="searchForm">
+        <article class="search-form" id="searchForm">
             <h6>스마트 도시 이벤트 검색</h6>
             <form>
                 <div>
