--- a/danusys-platform/src/main/resources/templates/view/pages/inqry/facilities.html
+++ b/danusys-platform/src/main/resources/templates/view/pages/inqry/facilities.html
@@ -9,7 +9,7 @@
         <span>시설물 관리</span>
     </h4>
     <section class="inquiryContent">
-        <article class="searchForm">
+        <article class="search-form" id="searchForm">
             <h6>시설물 검색</h6>
             <form>
                 <div>
