--- a/danusys-platform/src/main/resources/templates/view/pages/inqry/station.html
+++ b/danusys-platform/src/main/resources/templates/view/pages/inqry/station.html
@@ -9,7 +9,7 @@
         <span>개소 관리</span>
     </h4>
     <section class="inquiryContent">
-        <article class="searchForm">
+        <article class="search-form" id="searchForm">
             <h6>개소 검색</h6>
             <form>
                 <div>
